--- a/Evita_distributed/packages.config
+++ b/Evita_distributed/packages.config
@@ -3,6 +3,12 @@
   <package id="Antlr" version="3.5.0.2" targetFramework="net472" />
   <package id="bootstrap" version="3.4.1" targetFramework="net472" />
   <package id="EntityFramework" version="6.2.0" targetFramework="net472" />
+  <package id="FirebaseAdmin" version="1.13.0" targetFramework="net472" />
+  <package id="Google.Api.Gax" version="2.7.0" targetFramework="net472" />
+  <package id="Google.Api.Gax.Rest" version="2.7.0" targetFramework="net472" />
+  <package id="Google.Apis" version="1.40.0" targetFramework="net472" />
+  <package id="Google.Apis.Auth" version="1.40.0" targetFramework="net472" />
+  <package id="Google.Apis.Core" version="1.40.0" targetFramework="net472" />
   <package id="jQuery" version="3.4.1" targetFramework="net472" />
   <package id="jQuery.Validation" version="1.17.0" targetFramework="net472" />
   <package id="Microsoft.AspNet.Identity.Core" version="2.2.3" targetFramework="net472" />
@@ -40,7 +46,9 @@
   <package id="Owin" version="1.0" targetFramework="net472" />
   <package id="RestSharp" version="106.11.4" targetFramework="net472" />
   <package id="System.Buffers" version="4.5.1" targetFramework="net472" />
+  <package id="System.Collections.Immutable" version="1.5.0" targetFramework="net472" />
   <package id="System.ComponentModel.Annotations" version="4.7.0" targetFramework="net472" />
+  <package id="System.Interactive.Async" version="3.2.0" targetFramework="net472" />
   <package id="System.Memory" version="4.5.4" targetFramework="net472" />
   <package id="System.Numerics.Vectors" version="4.5.0" targetFramework="net472" />
   <package id="System.Runtime.CompilerServices.Unsafe" version="4.7.1" targetFramework="net472" />
